--- a/api-def/uniwebview.toml
+++ b/api-def/uniwebview.toml
@@ -1580,6 +1580,32 @@ type = "bool"
 summary = "Whether the user interaction should be enabled or not."
 
 [[Methods]]
+name = "SetTransparencyClickingThroughEnabled"
+syntax = "SetTransparencyClickingThroughEnabled(bool enabled)"
+returnType = "void"
+summary = """
+Sets whether the web view should pass through clicks at its clear pixels to Unity scene.
+
+Setting this method is a pre-condition for the whole passing-through feature to work. To allow your touch passing through
+to Unity scene, the following conditions should be met at the same time:
+
+1. This method is called with `true`. It enables the web view to check every touch on the web view.
+2. The web view has a transparent background in body style for its content by CSS.
+3. The web view itself has a transparent background color by setting `BackgroundColor` with a clear color.
+
+Then, when user clicks on the clear pixel on the web view, the touch events will not be handled by the web view.
+Instead, these events are passed to Unity scene. By using this feature, it is possible to create a UI for your game 
+with the web view.
+
+Only clicks on transparent part on the web view will be delivered to Unity scene. The web view still intercepts
+and handles other touches on visible pixels on the web view.
+"""
+[[Methods.parameters]]
+name = "enabled"
+type = "bool"
+summary = "Whether the transparency clicking through feature should be enabled in this web view."
+
+[[Methods]]
 name = "SetWebContentsDebuggingEnabled"
 syntax = "SetWebContentsDebuggingEnabled(bool enabled)"
 returnType = "void"
