--- a/api-def/uniwebview.toml
+++ b/api-def/uniwebview.toml
@@ -1838,7 +1838,7 @@ summary = "If `true`, the scrolling happens with animation. Otherwise, it happen
 
 [[Methods]]
 name = "AddDownloadURL"
-syntax = "AddDownloadURL(string urlString)"
+syntax = "AddDownloadURL(string urlString, UniWebViewDownloadMatchingType type)"
 returnType = "void"
 summary = """
 Adds the URL to download inspecting list.
@@ -1852,12 +1852,19 @@ example = """
 ```csharp
 // On iOS, access to "https://example.com/file.pdf" will trigger a download task instead of being rendered in place.
 webView.AddDownloadURL("https://example.com/file.pdf");
+
+// You can also use a regular expression.
+webView.AddDownloadURL("https://example.com/file*", UniWebViewDownloadMatchingType.RegularExpression);
 ```
 """
 [[Methods.parameters]]
 name = "urlString"
 type = "string"
-summary = "The inspected URL."
+summary = "The inspected URL string or a regular expression."
+[[Methods.parameters]]
+name = "type"
+type = "UniWebViewDownloadMatchingType"
+summary = "The download matching type used to match the URL. Default is `ExactValue`."
 [[Methods.badges]]
 name = "iOS"
 color = "orange"
@@ -1867,7 +1874,7 @@ color = "purple"
 
 [[Methods]]
 name = "RemoveDownloadURL"
-syntax = "RemoveDownloadURL(string urlString)"
+syntax = "RemoveDownloadURL(string urlString, UniWebViewDownloadMatchingType type)"
 returnType = "void"
 summary = """
 Removes the URL from download inspecting list.
@@ -1886,7 +1893,11 @@ webView.RemoveDownloadURL("https://example.com/file.pdf");
 [[Methods.parameters]]
 name = "urlString"
 type = "string"
-summary = "The inspected URL."
+summary = "The inspected URL string or a regular expression."
+[[Methods.parameters]]
+name = "type"
+type = "UniWebViewDownloadMatchingType"
+summary = "The download matching type used to match the URL. Default is `ExactValue`."
 [[Methods.badges]]
 name = "iOS"
 color = "orange"
@@ -1896,7 +1907,7 @@ color = "purple"
 
 [[Methods]]
 name = "AddDownloadMIMEType"
-syntax = "AddDownloadMIMEType(string MIMEType)"
+syntax = "AddDownloadMIMEType(string MIMEType, UniWebViewDownloadMatchingType type)"
 returnType = "void"
 summary = """
 Adds the MIME type to download inspecting list.
@@ -1910,12 +1921,19 @@ example = """
 ```csharp
 // On iOS, access to any PDF files will trigger a download task instead of being rendered in place.
 webView.AddDownloadMIMEType("application/pdf");
+
+// You can also use a regular expression.
+webView.AddDownloadMIMEType("image/*", UniWebViewDownloadMatchingType.RegularExpression);
 ```
 """
 [[Methods.parameters]]
 name = "MIMEType"
 type = "string"
 summary = "The inspected MIME type of the response."
+[[Methods.parameters]]
+name = "type"
+type = "UniWebViewDownloadMatchingType"
+summary = "The download matching type used to match the MIME type. Default is `ExactValue`"
 [[Methods.badges]]
 name = "iOS"
 color = "orange"
@@ -1925,7 +1943,7 @@ color = "purple"
 
 [[Methods]]
 name = "RemoveDownloadMIMETypes"
-syntax = "RemoveDownloadMIMETypes(string MIMEType)"
+syntax = "RemoveDownloadMIMETypes(string MIMEType, UniWebViewDownloadMatchingType type)"
 returnType = "void"
 summary = """
 Removes the MIME type from download inspecting list.
@@ -1945,6 +1963,10 @@ webView.RemoveDownloadMIMETypes("application/pdf");
 name = "MIMEType"
 type = "string"
 summary = "The inspected MIME type of the response."
+[[Methods.parameters]]
+name = "type"
+type = "UniWebViewDownloadMatchingType"
+summary = "The download matching type used to match the MIME type. Default is `ExactValue`"
 [[Methods.badges]]
 name = "iOS"
 color = "orange"
