--- a/api-def/uniwebviewsafebrowsing.toml
+++ b/api-def/uniwebviewsafebrowsing.toml
@@ -61,6 +61,9 @@ if (UniWebViewSafeBrowsing.IsSafeBrowsingSupported) {
 }
 ```
 """
+[[Properties.badges]]
+name = "static"
+color = "blue"
 
 [[Methods]]
 name = "Create"
