--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "fs-extra": "^5.0.0",
     "marked": "^4.0.10",
     "toml": "^2.3.3",
-    "vuepress": "^1.0.0"
+    "vuepress": "^2.0.0-beta.49"
   },
   "name": "UniWebView-Docs",
   "version": "1.0.0",
@@ -18,6 +18,7 @@
     "api": "node ./script/build-api.js"
   },
   "devDependencies": {
+    "@vuepress/plugin-search": "^2.0.0-beta.49",
     "prismjs": "^1.27.0"
   }
 }
